--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "angular2-quickstart",
-  "version": "1.0.0",
+  "name": "coaster-namer",
+  "version": "0.0.1",
   "description": "QuickStart package.json from the documentation, supplemented with testing support",
   "scripts": {
     "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
-    "docker-build": "docker build -t ng2-quickstart .",
-    "docker": "npm run docker-build && docker run -it --rm -p 3000:3000 -p 3001:3001 ng2-quickstart",
     "e2e": "tsc && concurrently \"http-server\" \"protractor protractor.config.js\"",
     "lite": "lite-server",
     "postinstall": "typings install",
@@ -17,7 +15,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "angular2": "2.0.0-beta.16",
     "systemjs": "0.19.26",
