--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "coaster-namer",
   "version": "0.0.1",
-  "description": "QuickStart package.json from the documentation, supplemented with testing support",
+  "description": "Generate random names for roller coasters",
   "scripts": {
     "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
-    "e2e": "tsc && concurrently \"http-server\" \"protractor protractor.config.js\"",
     "lite": "lite-server",
     "postinstall": "typings install",
     "test": "tsc && concurrently \"tsc -w\" \"karma start karma.conf.js\"",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "typings": "typings",
-    "webdriver:update": "webdriver-manager update"
   },
   "keywords": [],
   "author": "",
@@ -42,7 +40,6 @@
     "karma-cli": "^0.1.2",
     "karma-htmlfile-reporter": "^0.2.2",
     "karma-jasmine": "^0.3.8",
-    "protractor": "^3.3.0",
     "rimraf": "^2.5.2"
   },
   "repository": {}
