--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "tsc && concurrently \"tsc -w\" \"karma start karma.conf.js\"",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
-    "typings": "typings",
+    "typings": "typings"
   },
   "keywords": [],
   "author": "",
